--- a/index.html
+++ b/index.html
@@ -16,30 +16,36 @@
 
    <div class="poster">
      <h3> "The Classy Roommate" </h3>
-      <!--Choose 1 image that matches this description. Create a custom color border. Center the image.-->
+      <img id="audrey" src="images/audrey.jpg" alt="Audrey Hepbu       rn">
    </div>  
    
-   <div class= "poster">
+   <div class="poster">
      <h3> "The Neurotic New Yorker" </h3>
-     <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
- 
+       <div id="NewYork">
+         <img id="nyc" src="images/newyork.jpg" alt="New York Ci          ty">
+         <img id="woody" src="images/woody.jpg" alt="Woody">
+       </div>
    </div>
  
    <div class="poster"> 
      <h3> "The Change the World Roommate"</h3>
-      <!--Find 2 images that match this description. Create different style frames for each poster. Place them on opposide sides of the wall.-->
-   
+        <div id="change">
+         <img id="rosie" src="images/rosie.jpg" alt="Rosie">
+         <img id="obama" src="images/obama.jpg" alt="Obama">
+        </div>
    </div>
  
    <div class="poster">
      <h3> "The Art History Major"</h3>
-   <!--Find 2 images that match this description. Resize these images so that they fit on the wall. Center them and place them in one large frame.-->
-   
+        <div id="art"> 
+         <img id="picasso" src="images/picasso.jpg" alt="Art?">
+         <img id="warhol" src="images/warhol.jpg" alt="Warhol">
+        </div>
    </div>
   
    <div class="poster">
      <h3> "Your wall!"</h3>
-     <!--Create a wall with a new theme!-->
+     <img id="pepe" src="http://40.media.tumblr.com/6407cbc488f5879e46eb1afc8e7b8c94/tumblr_nn6h0c81nN1tvbqk7o1_400.jpg" alt="Famous Pepe">
 
    </div>  
 
