--- a/index.html
+++ b/index.html
@@ -17,30 +17,40 @@
    <div class="poster">
      <h3> "The Classy Roommate" </h3>
       <!--Choose 1 image that matches this description. Create a custom color border. Center the image.-->
+     <img id="audrey" src="images/audrey.jpg" alt="Audrey">
    </div>  
-   
    <div class= "poster">
      <h3> "The Neurotic New Yorker" </h3>
      <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
- 
+     <div class="NYC">
+     <img id="newyork" src="images/newyork.jpg" alt="New York">
+      <img id="woody" src="images/woody.jpg" alt="Woody">
+   </div>
    </div>
  
    <div class="poster"> 
      <h3> "The Change the World Roommate"</h3>
       <!--Find 2 images that match this description. Create different style frames for each poster. Place them on opposide sides of the wall.-->
-   
+      <img id="rosie" src="images/rosie.jpg" alt="Rosie">
+      <img id="Obama" src="images/obama.jpg" alt="Obama">
    </div>
  
    <div class="poster">
      <h3> "The Art History Major"</h3>
    <!--Find 2 images that match this description. Resize these images so that they fit on the wall. Center them and place them in one large frame.-->
-   
+     <div id="art">
+      <img id="picasso" src="images/picasso.jpg" alt="Picasso">
+      <img id="warhol" src="images/warhol.jpg" alt="Warhol">
+   </div>
    </div>
   
    <div class="poster">
      <h3> "Your wall!"</h3>
      <!--Create a wall with a new theme!-->
-
+     <div id="room">
+      <img id="natural1" src="images/natural1.jpg" alt="Natural1">
+      <img id="natural2" src="images/natural2.jpg" alt="Natural2">
+   </div>
    </div>  
 
   </body>
