--- a/index.html
+++ b/index.html
@@ -16,18 +16,21 @@
 
    <div class="poster">
      <h3> "The Classy Roommate" </h3>
-      <!--Choose 1 image that matches this description. Create a custom color border. Center the image.-->
+      <img src="images/audrey.jpg" alt="image">
    </div>  
    
    <div class= "poster">
      <h3> "The Neurotic New Yorker" </h3>
-     <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
+     <div>
+       <img src="images/newyork.jpg" alt="image">
+       <img src="images/newyork.jpg" alt="image">
+     </div>
  
    </div>
  
    <div class="poster"> 
      <h3> "The Change the World Roommate"</h3>
-      <!--Find 2 images that match this description. Create different style frames for each poster. Place them on opposide sides of the wall.-->
+      <img src="images/obama.jpg" alt="OBAMA">
    
    </div>
  
