--- a/index.html
+++ b/index.html
@@ -17,22 +17,41 @@
    <div class="poster">
      <h3> "The Classy Roommate" </h3>
       <!--Choose 1 image that matches this description. Create a custom color border. Center the image.-->
-   </div>  
+     <div id="classy">
+       <img id="audrey" src="images/audrey.jpg" alt="audrey">
+     </div>
+     
+   </div>
    
    <div class= "poster">
      <h3> "The Neurotic New Yorker" </h3>
-     <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
+     <div id="neu">
+        <span>
+         <img id="audrey2" src="images/audrey.jpg" alt="audrey">
+         <img id="new" src="images/newyork.jpg">
+       </span>
+     </div>
+       <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
  
    </div>
  
    <div class="poster"> 
      <h3> "The Change the World Roommate"</h3>
-      <!--Find 2 images that match this description. Create different style frames for each poster. Place them on opposide sides of the wall.-->
+     
+     <img src="images/obama.jpg" id="obama">
+     <img src="images/rosie.jpg" id="rosie">
+          <!--Find 2 images that match this description. Create different style frames for each poster. Place them on opposide sides of the wall.-->
    
    </div>
  
    <div class="poster">
      <h3> "The Art History Major"</h3>
+     <div id="art">
+       <div id="art2">
+         <img src="images/picasso.jpg">
+         <img src="images/warhol.jpg">
+       </div>
+     </div>
    <!--Find 2 images that match this description. Resize these images so that they fit on the wall. Center them and place them in one large frame.-->
    
    </div>
