mostly collaborated with others

--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
    <div class="poster">
      <h3> "The Classy Roommate" </h3>
       <!--Choose 1 image that matches this description. Create a custom color border. Center the image.-->
+     
+     <img src="images/audrey.jpg"> alt:audrey
+     
    </div>  
    
    <div class= "poster">
      <h3> "The Neurotic New Yorker" </h3>
      <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
  
+     <img src="images/newyork.jpg">
+     <img src="images/woody.jpg">
    </div>
  
    <div class="poster"> 
