--- a/index.html
+++ b/index.html
@@ -17,23 +17,31 @@
    <div class="poster">
      <h3> "The Classy Roommate" </h3>
       <!--Choose 1 image that matches this description. Create a custom color border. Center the image.-->
+     <img src = "images/audrey.jpg" alt= "this is an image of audrey">
+     
    </div>  
    
    <div class= "poster">
      <h3> "The Neurotic New Yorker" </h3>
      <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
- 
+     <img src = "images/newyork.jpg" alt= "new york">
+     <img src = "images/woody.jpg" alt= "woody">
    </div>
  
    <div class="poster"> 
      <h3> "The Change the World Roommate"</h3>
       <!--Find 2 images that match this description. Create different style frames for each poster. Place them on opposide sides of the wall.-->
+     <img src = "images/obama.jpg" alt= "obama">
+     <img src = "images/rosie.jpg" alt= "rosie">
    
    </div>
  
    <div class="poster">
      <h3> "The Art History Major"</h3>
    <!--Find 2 images that match this description. Resize these images so that they fit on the wall. Center them and place them in one large frame.-->
+     <img src = "images/picasso.jpg" alt= "picasso">
+     <img src = "images/warhol.jpg" alt= "warhol">
+   
    
    </div>
   
