--- a/index.html
+++ b/index.html
@@ -17,24 +17,33 @@
    <div class="poster">
      <h3> "The Classy Roommate" </h3>
       <!--Choose 1 image that matches this description. Create a custom color border. Center the image.-->
+     <img id="audrey" src="images/audrey.jpg" alt="audrey">
+          
    </div>  
    
    <div class= "poster">
      <h3> "The Neurotic New Yorker" </h3>
      <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
  
+      <img id="ny1" src="images/newyork.jpg" alt="newyork">
+      <img id="woody" src="images/woody.jpg" alt="woody">
    </div>
  
    <div class="poster"> 
      <h3> "The Change the World Roommate"</h3>
       <!--Find 2 images that match this description. Create different style frames for each poster. Place them on opposide sides of the wall.-->
-   
+      <img id="obama" src="images/obama.jpg">
+      <img id="rosie" src="images/rosie.jpg"> 
    </div>
  
    <div class="poster">
      <h3> "The Art History Major"</h3>
    <!--Find 2 images that match this description. Resize these images so that they fit on the wall. Center them and place them in one large frame.-->
-   
+     <div id="frame">
+   <img id="warhol" src="images/warhol.jpg">
+   <img id="picasso" src="images/picasso.jpg">
+    </div>
+     
    </div>
   
    <div class="poster">
