--- a/index.html
+++ b/index.html
@@ -17,23 +17,33 @@
    <div class="poster">
      <h3> "The Classy Roommate" </h3>
       <!--Choose 1 image that matches this description. Create a custom color border. Center the image.-->
+      <img src="images/audrey.jpg" alt="audrey hepburn" id="audrey">
    </div>  
    
    <div class= "poster">
      <h3> "The Neurotic New Yorker" </h3>
-     <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
+     <!--Choose 2 images that matches this description. Hang them in the frames that are the same size (Hint: Think about padding...)   -->
+
+     <img src="images/newyork.jpg" alt="new york" id="new_york">
+     <img src="images/obama.jpg" alt="obama" id="obama">
  
    </div>
  
    <div class="poster"> 
      <h3> "The Change the World Roommate"</h3>
       <!--Find 2 images that match this description. Create different style frames for each poster. Place them on opposide sides of the wall.-->
+     <img src="images/obama.jpg" alt="obama" id="obama2">
+     <img src="images/rosie.jpg" alt="rosie" id="rosie">
    
    </div>
  
    <div class="poster">
      <h3> "The Art History Major"</h3>
    <!--Find 2 images that match this description. Resize these images so that they fit on the wall. Center them and place them in one large frame.-->
+     <div id="art">
+     <img src="images/warhol.jpg" alt="warhol" id="warhol">
+     <img src="images/picasso.jpg" alt="picasso" id="picasso">
+     </div>
    
    </div>
   
