--- a/index.html
+++ b/index.html
@@ -17,29 +17,37 @@
    <div class="poster">
      <h3> "The Classy Roommate" </h3>
       <!--Choose 1 image that matches this description. Create a custom color border. Center the image.-->
+     <img id="Aud" src="images/audrey.jpg">
    </div>  
    
    <div class= "poster">
      <h3> "The Neurotic New Yorker" </h3>
      <!--Choose 2 images that matches this description. Hang them in the frames that arethe same size (Hint: Think about padding...)   -->
- 
+ <img id="ny" src="images/newyork.jpg">
+     <img id="wood" src="images/woody.jpg">
    </div>
  
    <div class="poster"> 
      <h3> "The Change the World Roommate"</h3>
       <!--Find 2 images that match this description. Create different style frames for each poster. Place them on opposide sides of the wall.-->
-   
+     
+   <img id="obama" src="images/obama.jpg">
+     <img id="rr" src="images/rosie.jpg">
    </div>
  
    <div class="poster">
      <h3> "The Art History Major"</h3>
    <!--Find 2 images that match this description. Resize these images so that they fit on the wall. Center them and place them in one large frame.-->
-   
+  
+     <div class= double> <img id="war" src="images/picasso.jpg">
+     <img id="pic" src="images/warhol.jpg">
+     </div>
    </div>
   
    <div class="poster">
      <h3> "Your wall!"</h3>
      <!--Create a wall with a new theme!-->
+    
 
    </div>  
 
